// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-larger-screens"
    >
      Expense
    </div>
    <div
      className="show-for-larger-screens"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={55555}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={333}
      createdAt={345600000}
      description="bill eggs"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-larger-screens"
    >
      Expense
    </div>
    <div
      className="show-for-larger-screens"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div>
      <span
        className="list-item list-item--empty-msg"
      >
        no expenses
      </span>
    </div>
  </div>
</div>
`;
